discussion/kv_engine/175088/175088_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config interface char* to std::string

Change-Id: I46b9b7200b9c9850f2a50f49ab0791b52a63d980

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-05-20 14:49:19.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-05-20 14:50:21.000000000
Message: 
Patch Set 3: Code-Review-1

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-20 15:33:10.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46278/ : FAILURE

Compile error at kv_engine\utilities\CMakeFiles\mcd_util.dir\Unity\unity_0_cxx.cxx(19): error C2129: static function "int read_config_file(std::string,config_item [],FILE *)" declared but not defined ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46278/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17623/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:67:36: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
int parse_config(std::string conf, struct config_item items[], FILE* error);
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_server.cc:128:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[],
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:20:29: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                            struct config_item items[],
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17623/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38885/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38885/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27794/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27794/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18598/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18598/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7334/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7334/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7232/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7232/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19392/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19392/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19741/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19741/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20410/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20410/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16647/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
